# greenatom_test

./: README.md  pyproject.toml  task_2.py  task_3_(html_tags).py  task_4_(return_ip).py  task_5_(version_comparison).py
